feat: complete book detail, read ISBN to add book info